fix scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -114,8 +114,8 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 15px;
-  height: 15px;
+  width: 24px;
+  height: 30px;
 }
 
 ::-webkit-scrollbar-track {
@@ -129,10 +129,10 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   @apply theme-75;
-  border: 5px solid transparent;
+  border: 6px solid transparent;
 }
 
 ::-webkit-scrollbar-thumb:active {
   @apply theme-100;
-  border: 4px solid transparent;
+  border: 6px solid transparent;
 }
